--- a/media/css/main.css
+++ b/media/css/main.css
@@ -496,14 +496,14 @@ ol.posts li div.author span.posts {
 
 ol.posts li div.content {
     float: left;
-    padding: 0 2% 1em 2%;
+    padding: 0 1% 1em 1%;
     width: 72.9%;
 }
 
 ol.posts li div.info {
     clear: left;
     border-top: 1px solid #e4e4e4;
-    padding: 1em;
+    padding: 1em 1em 1em 1%;
 }
 
 ol.posts li div.info a {
